[package]
name = "boards-on-solana-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"