[package]
name = "boards-on-solana-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
diesel = {version="2.1.6", features = ["postgres"] }
solana-sdk = "1.18.14"
solana-rpc-client = "1.18.14"
base64 = "0.22.1"
borsh = "1.5.1"